--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,54 @@ color: var(--color-secondary);
      margin-right: auto;
     width: 696px;
 }
+
+  .modal-fon{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  .modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #ffffff;
+    width: 528px;
+    height: 581px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translate(-50%, -50%);
+  }
+
+
+  .is-hidden{
+    opacity: 0;
+    pointer-events: none;
+  }
+  .icon-close{
+    width: 18px;
+    height: 18px;
+  }
+  .button-modal{
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    align-items: center;
+    margin-right: 8px;
+    margin-top: 8px;
+
+  }
 /* Main */
 
 .visually-hidden{
@@ -358,6 +406,7 @@ margin-right: 0px;
 
 .text-images{
     position: absolute;
+    z-index: 1;
     width: 370px;
     height: 70px;
        font-weight: 700;
@@ -599,11 +648,13 @@ background-color: var(--color-adress);
 }
 
 .text-links-footer{
+    display: block;
         font-weight: 700;
         font-size: 14px;
         line-height: 16px;
         text-transform: uppercase;
     color: var(--color-adress);
+    margin-bottom: 20px;
 
     
     
@@ -613,9 +664,7 @@ background-color: var(--color-adress);
     
 }
 
-.footer .social-links{
-    margin-top: 20px;
-}
+
 
 .footer-item .social-link{
 
@@ -655,6 +704,7 @@ background-color: var(--color-adress);
 .button-portfolio:focus{
     color: var(--color-adress);
     background-color: var(--color-blue);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button-list {
@@ -738,7 +788,7 @@ background-color: var(--color-adress);
 
 
 .link-procets:hover .procets-text-photo{
-   transform: translateY(-294px);
+   transform: translateY(-290px);
 }
 
 .border-procets{
@@ -748,11 +798,13 @@ background-color: var(--color-adress);
 }
 
 .link-procets{
+    display: flex;
+    flex-direction: column;
     color: inherit;
     text-decoration: none;
 }
 
-.link-procets:hover .border-procets {
+.link-procets:hover, .link-procets:focus {
     
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
