--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,7 @@ color: var(--color-secondary);
     left: 0;
     z-index: 5;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .modal{
@@ -267,12 +268,14 @@ color: var(--color-secondary);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transform: translate(-50%, -50%);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 
   .is-hidden{
     opacity: 0;
     pointer-events: none;
+    
   }
   .icon-close{
     width: 18px;
