--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,8 @@ color: var(--color-secondary);
       background-repeat: no-repeat;
 
 
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4)),rgba(47, 48, 58, 0.4), url(../images/banner.jpg);
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/banner.jpg);
+     
       background-size: cover;
        
   }
